; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/msi/extr_msi.c_test_null.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/msi/extr_msi.c_test_null.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KEY_ALL_ACCESS = common dso_local global i32 0, align 4
@is_wow64 = common dso_local global i64 0, align 8
@KEY_WOW64_64KEY = common dso_local global i32 0, align 4
@ERROR_INVALID_PARAMETER = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [13 x i8] c"wrong error\0A\00", align 1
@INSTALLSTATE_INVALIDARG = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [14 x i8] c"wrong return\0A\00", align 1
@.str.2 = private unnamed_addr constant [39 x i8] c"{00000000-0000-0000-0000-000000000000}\00", align 1
@.str.3 = private unnamed_addr constant [39 x i8] c"{00000000-0000-0000-0000-000000000001}\00", align 1
@.str.4 = private unnamed_addr constant [4 x i8] c"foo\00", align 1
@.str.5 = private unnamed_addr constant [16 x i8] c"wrong error %d\0A\00", align 1
@.str.6 = private unnamed_addr constant [39 x i8] c"{00000000-0000-0000-0000-000000000002}\00", align 1
@INSTALLSTATE_DEFAULT = common dso_local global i32 0, align 4
@ERROR_UNKNOWN_PRODUCT = common dso_local global i64 0, align 8
@HKEY_LOCAL_MACHINE = common dso_local global i32 0, align 4
@.str.7 = private unnamed_addr constant [52 x i8] c"SOFTWARE\\Microsoft\\Windows\\CurrentVersion\\Uninstall\00", align 1
@ERROR_ACCESS_DENIED = common dso_local global i64 0, align 8
@.str.8 = private unnamed_addr constant [36 x i8] c"Not enough rights to perform tests\0A\00", align 1
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@ERROR_FILE_NOT_FOUND = common dso_local global i64 0, align 8
@.str.9 = private unnamed_addr constant [15 x i8] c"Out of memory\0A\00", align 1
@REG_SZ = common dso_local global i32 0, align 4
@.str.10 = private unnamed_addr constant [5 x i8] c"test\00", align 1
@.str.11 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.12 = private unnamed_addr constant [91 x i8] c"SOFTWARE\\Microsoft\\Windows\\CurrentVersion\\Uninstall\\{F1C3AF50-8B56-4A69-A00C-00773FE42F30}\00", align 1
@.str.13 = private unnamed_addr constant [39 x i8] c"{F1C3AF50-8B56-4A69-A00C-00773FE42F30}\00", align 1
@ERROR_UNKNOWN_PROPERTY = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_null to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_null() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store i32* null, i32** %6, align 8
  %9 = load i32, i32* @KEY_ALL_ACCESS, align 4
  store i32 %9, i32* %8, align 4
  %10 = load i64, i64* @is_wow64, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %0
  %13 = load i32, i32* @KEY_WOW64_64KEY, align 4
  %14 = load i32, i32* %8, align 4
  %15 = or i32 %14, %13
  store i32 %15, i32* %8, align 4
  br label %16

16:                                               ; preds = %12, %0
  %17 = call i64 @pMsiOpenPackageExW(i32* null, i32 0, i32* %1)
  store i64 %17, i64* %2, align 8
  %18 = load i64, i64* %2, align 8
  %19 = load i64, i64* @ERROR_INVALID_PARAMETER, align 8
  %20 = icmp eq i64 %18, %19
  %21 = zext i1 %20 to i32
  %22 = call i32 (i32, i8*, ...) @ok(i32 %21, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %23 = call i64 @MsiQueryProductStateW(i32* null)
  store i64 %23, i64* %7, align 8
  %24 = load i64, i64* %7, align 8
  %25 = load i64, i64* @INSTALLSTATE_INVALIDARG, align 8
  %26 = icmp eq i64 %24, %25
  %27 = zext i1 %26 to i32
  %28 = call i32 (i32, i8*, ...) @ok(i32 %27, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0))
  %29 = call i64 @MsiEnumFeaturesW(i32* null, i32 0, i32* null, i32* null)
  store i64 %29, i64* %2, align 8
  %30 = load i64, i64* %2, align 8
  %31 = load i64, i64* @ERROR_INVALID_PARAMETER, align 8
  %32 = icmp eq i64 %30, %31
  %33 = zext i1 %32 to i32
  %34 = call i32 (i32, i8*, ...) @ok(i32 %33, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %35 = call i64 @MsiConfigureFeatureW(i32* null, i32* null, i32 0)
  store i64 %35, i64* %2, align 8
  %36 = load i64, i64* %2, align 8
  %37 = load i64, i64* @ERROR_INVALID_PARAMETER, align 8
  %38 = icmp eq i64 %36, %37
  %39 = zext i1 %38 to i32
  %40 = call i32 (i32, i8*, ...) @ok(i32 %39, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %41 = call i64 @MsiConfigureFeatureA(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.2, i64 0, i64 0), i8* null, i32 0)
  store i64 %41, i64* %2, align 8
  %42 = load i64, i64* %2, align 8
  %43 = load i64, i64* @ERROR_INVALID_PARAMETER, align 8
  %44 = icmp eq i64 %42, %43
  %45 = zext i1 %44 to i32
  %46 = call i32 (i32, i8*, ...) @ok(i32 %45, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %47 = call i64 @MsiConfigureFeatureA(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.4, i64 0, i64 0), i32 0)
  store i64 %47, i64* %2, align 8
  %48 = load i64, i64* %2, align 8
  %49 = load i64, i64* @ERROR_INVALID_PARAMETER, align 8
  %50 = icmp eq i64 %48, %49
  %51 = zext i1 %50 to i32
  %52 = load i64, i64* %2, align 8
  %53 = call i32 (i32, i8*, ...) @ok(i32 %51, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.5, i64 0, i64 0), i64 %52)
  %54 = load i32, i32* @INSTALLSTATE_DEFAULT, align 4
  %55 = call i64 @MsiConfigureFeatureA(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.6, i64 0, i64 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.4, i64 0, i64 0), i32 %54)
  store i64 %55, i64* %2, align 8
  %56 = load i64, i64* %2, align 8
  %57 = load i64, i64* @ERROR_UNKNOWN_PRODUCT, align 8
  %58 = icmp eq i64 %56, %57
  %59 = zext i1 %58 to i32
  %60 = load i64, i64* %2, align 8
  %61 = call i32 (i32, i8*, ...) @ok(i32 %59, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.5, i64 0, i64 0), i64 %60)
  %62 = load i32, i32* @HKEY_LOCAL_MACHINE, align 4
  %63 = load i32, i32* %8, align 4
  %64 = call i64 @RegOpenKeyExA(i32 %62, i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.7, i64 0, i64 0), i32 0, i32 %63, i32* %3)
  store i64 %64, i64* %2, align 8
  %65 = load i64, i64* %2, align 8
  %66 = load i64, i64* @ERROR_ACCESS_DENIED, align 8
  %67 = icmp eq i64 %65, %66
  br i1 %67, label %68, label %70

68:                                               ; preds = %16
  %69 = call i32 @skip(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.8, i64 0, i64 0))
  br label %223

70:                                               ; preds = %16
  %71 = load i64, i64* %2, align 8
  %72 = load i64, i64* @ERROR_SUCCESS, align 8
  %73 = icmp eq i64 %71, %72
  %74 = zext i1 %73 to i32
  %75 = load i64, i64* %2, align 8
  %76 = call i32 (i32, i8*, ...) @ok(i32 %74, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.5, i64 0, i64 0), i64 %75)
  %77 = load i32, i32* %3, align 4
  %78 = load i32*, i32** %6, align 8
  %79 = call i64 @RegQueryValueExA(i32 %77, i32* null, i32 0, i32* %4, i32* %78, i32* %5)
  store i64 %79, i64* %2, align 8
  %80 = load i64, i64* %2, align 8
  %81 = load i64, i64* @ERROR_SUCCESS, align 8
  %82 = icmp eq i64 %80, %81
  br i1 %82, label %87, label %83

83:                                               ; preds = %70
  %84 = load i64, i64* %2, align 8
  %85 = load i64, i64* @ERROR_FILE_NOT_FOUND, align 8
  %86 = icmp eq i64 %84, %85
  br label %87

87:                                               ; preds = %83, %70
  %88 = phi i1 [ true, %70 ], [ %86, %83 ]
  %89 = zext i1 %88 to i32
  %90 = load i64, i64* %2, align 8
  %91 = call i32 (i32, i8*, ...) @ok(i32 %89, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.5, i64 0, i64 0), i64 %90)
  %92 = load i64, i64* %2, align 8
  %93 = load i64, i64* @ERROR_SUCCESS, align 8
  %94 = icmp eq i64 %92, %93
  br i1 %94, label %95, label %114

95:                                               ; preds = %87
  %96 = call i32 (...) @GetProcessHeap()
  %97 = load i32, i32* %5, align 4
  %98 = call i32* @HeapAlloc(i32 %96, i32 0, i32 %97)
  store i32* %98, i32** %6, align 8
  %99 = load i32*, i32** %6, align 8
  %100 = icmp ne i32* %99, null
  br i1 %100, label %103, label %101

101:                                              ; preds = %95
  %102 = call i32 @skip(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.9, i64 0, i64 0))
  br label %113

103:                                              ; preds = %95
  %104 = load i32, i32* %3, align 4
  %105 = load i32*, i32** %6, align 8
  %106 = call i64 @RegQueryValueExA(i32 %104, i32* null, i32 0, i32* %4, i32* %105, i32* %5)
  store i64 %106, i64* %2, align 8
  %107 = load i64, i64* %2, align 8
  %108 = load i64, i64* @ERROR_SUCCESS, align 8
  %109 = icmp eq i64 %107, %108
  %110 = zext i1 %109 to i32
  %111 = load i64, i64* %2, align 8
  %112 = call i32 (i32, i8*, ...) @ok(i32 %110, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.5, i64 0, i64 0), i64 %111)
  br label %113

113:                                              ; preds = %103, %101
  br label %114

114:                                              ; preds = %113, %87
  %115 = load i32, i32* %3, align 4
  %116 = load i32, i32* @REG_SZ, align 4
  %117 = call i32 @strlen(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.10, i64 0, i64 0))
  %118 = call i64 @RegSetValueA(i32 %115, i32* null, i32 %116, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.10, i64 0, i64 0), i32 %117)
  store i64 %118, i64* %2, align 8
  %119 = load i64, i64* %2, align 8
  %120 = load i64, i64* @ERROR_ACCESS_DENIED, align 8
  %121 = icmp eq i64 %119, %120
  br i1 %121, label %122, label %129

122:                                              ; preds = %114
  %123 = call i32 @skip(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.8, i64 0, i64 0))
  %124 = call i32 (...) @GetProcessHeap()
  %125 = load i32*, i32** %6, align 8
  %126 = call i32 @HeapFree(i32 %124, i32 0, i32* %125)
  %127 = load i32, i32* %3, align 4
  %128 = call i64 @RegCloseKey(i32 %127)
  br label %223

129:                                              ; preds = %114
  %130 = load i64, i64* %2, align 8
  %131 = load i64, i64* @ERROR_SUCCESS, align 8
  %132 = icmp eq i64 %130, %131
  %133 = zext i1 %132 to i32
  %134 = load i64, i64* %2, align 8
  %135 = call i32 (i32, i8*, ...) @ok(i32 %133, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.5, i64 0, i64 0), i64 %134)
  %136 = call i64 @MsiGetProductInfoA(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.11, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.11, i64 0, i64 0), i32* null, i32* null)
  store i64 %136, i64* %2, align 8
  %137 = load i64, i64* %2, align 8
  %138 = load i64, i64* @ERROR_INVALID_PARAMETER, align 8
  %139 = icmp eq i64 %137, %138
  %140 = zext i1 %139 to i32
  %141 = load i64, i64* %2, align 8
  %142 = call i32 (i32, i8*, ...) @ok(i32 %140, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.5, i64 0, i64 0), i64 %141)
  %143 = load i32*, i32** %6, align 8
  %144 = icmp ne i32* %143, null
  br i1 %144, label %145, label %160

145:                                              ; preds = %129
  %146 = load i32, i32* %3, align 4
  %147 = load i32, i32* %4, align 4
  %148 = load i32*, i32** %6, align 8
  %149 = load i32, i32* %5, align 4
  %150 = call i64 @RegSetValueExA(i32 %146, i32* null, i32 0, i32 %147, i32* %148, i32 %149)
  store i64 %150, i64* %2, align 8
  %151 = load i64, i64* %2, align 8
  %152 = load i64, i64* @ERROR_SUCCESS, align 8
  %153 = icmp eq i64 %151, %152
  %154 = zext i1 %153 to i32
  %155 = load i64, i64* %2, align 8
  %156 = call i32 (i32, i8*, ...) @ok(i32 %154, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.5, i64 0, i64 0), i64 %155)
  %157 = call i32 (...) @GetProcessHeap()
  %158 = load i32*, i32** %6, align 8
  %159 = call i32 @HeapFree(i32 %157, i32 0, i32* %158)
  br label %169

160:                                              ; preds = %129
  %161 = load i32, i32* %3, align 4
  %162 = call i64 @RegDeleteValueA(i32 %161, i32* null)
  store i64 %162, i64* %2, align 8
  %163 = load i64, i64* %2, align 8
  %164 = load i64, i64* @ERROR_SUCCESS, align 8
  %165 = icmp eq i64 %163, %164
  %166 = zext i1 %165 to i32
  %167 = load i64, i64* %2, align 8
  %168 = call i32 (i32, i8*, ...) @ok(i32 %166, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.5, i64 0, i64 0), i64 %167)
  br label %169

169:                                              ; preds = %160, %145
  %170 = load i32, i32* %3, align 4
  %171 = call i64 @RegCloseKey(i32 %170)
  store i64 %171, i64* %2, align 8
  %172 = load i64, i64* %2, align 8
  %173 = load i64, i64* @ERROR_SUCCESS, align 8
  %174 = icmp eq i64 %172, %173
  %175 = zext i1 %174 to i32
  %176 = load i64, i64* %2, align 8
  %177 = call i32 (i32, i8*, ...) @ok(i32 %175, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.5, i64 0, i64 0), i64 %176)
  %178 = load i32, i32* @HKEY_LOCAL_MACHINE, align 4
  %179 = load i32, i32* %8, align 4
  %180 = call i64 @RegCreateKeyExA(i32 %178, i8* getelementptr inbounds ([91 x i8], [91 x i8]* @.str.12, i64 0, i64 0), i32 0, i32* null, i32 0, i32 %179, i32* null, i32* %3, i32* null)
  store i64 %180, i64* %2, align 8
  %181 = load i64, i64* %2, align 8
  %182 = load i64, i64* @ERROR_SUCCESS, align 8
  %183 = icmp eq i64 %181, %182
  %184 = zext i1 %183 to i32
  %185 = load i64, i64* %2, align 8
  %186 = call i32 (i32, i8*, ...) @ok(i32 %184, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.5, i64 0, i64 0), i64 %185)
  %187 = load i32, i32* %3, align 4
  %188 = load i32, i32* @REG_SZ, align 4
  %189 = call i32 @strlen(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.10, i64 0, i64 0))
  %190 = call i64 @RegSetValueA(i32 %187, i32* null, i32 %188, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.10, i64 0, i64 0), i32 %189)
  store i64 %190, i64* %2, align 8
  %191 = load i64, i64* %2, align 8
  %192 = load i64, i64* @ERROR_SUCCESS, align 8
  %193 = icmp eq i64 %191, %192
  %194 = zext i1 %193 to i32
  %195 = load i64, i64* %2, align 8
  %196 = call i32 (i32, i8*, ...) @ok(i32 %194, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.5, i64 0, i64 0), i64 %195)
  %197 = call i64 @MsiGetProductInfoA(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str.13, i64 0, i64 0), i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.11, i64 0, i64 0), i32* null, i32* null)
  store i64 %197, i64* %2, align 8
  %198 = load i64, i64* %2, align 8
  %199 = load i64, i64* @ERROR_UNKNOWN_PROPERTY, align 8
  %200 = icmp eq i64 %198, %199
  %201 = zext i1 %200 to i32
  %202 = load i64, i64* %2, align 8
  %203 = call i32 (i32, i8*, ...) @ok(i32 %201, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.5, i64 0, i64 0), i64 %202)
  %204 = load i32, i32* %3, align 4
  %205 = call i64 @RegCloseKey(i32 %204)
  store i64 %205, i64* %2, align 8
  %206 = load i64, i64* %2, align 8
  %207 = load i64, i64* @ERROR_SUCCESS, align 8
  %208 = icmp eq i64 %206, %207
  %209 = zext i1 %208 to i32
  %210 = load i64, i64* %2, align 8
  %211 = call i32 (i32, i8*, ...) @ok(i32 %209, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.5, i64 0, i64 0), i64 %210)
  %212 = load i32, i32* @HKEY_LOCAL_MACHINE, align 4
  %213 = load i32, i32* %8, align 4
  %214 = load i32, i32* @KEY_WOW64_64KEY, align 4
  %215 = and i32 %213, %214
  %216 = call i64 @delete_key(i32 %212, i8* getelementptr inbounds ([91 x i8], [91 x i8]* @.str.12, i64 0, i64 0), i32 %215)
  store i64 %216, i64* %2, align 8
  %217 = load i64, i64* %2, align 8
  %218 = load i64, i64* @ERROR_SUCCESS, align 8
  %219 = icmp eq i64 %217, %218
  %220 = zext i1 %219 to i32
  %221 = load i64, i64* %2, align 8
  %222 = call i32 (i32, i8*, ...) @ok(i32 %220, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.5, i64 0, i64 0), i64 %221)
  br label %223

223:                                              ; preds = %169, %122, %68
  ret void
}

declare dso_local i64 @pMsiOpenPackageExW(i32*, i32, i32*) #1

declare dso_local i32 @ok(i32, i8*, ...) #1

declare dso_local i64 @MsiQueryProductStateW(i32*) #1

declare dso_local i64 @MsiEnumFeaturesW(i32*, i32, i32*, i32*) #1

declare dso_local i64 @MsiConfigureFeatureW(i32*, i32*, i32) #1

declare dso_local i64 @MsiConfigureFeatureA(i8*, i8*, i32) #1

declare dso_local i64 @RegOpenKeyExA(i32, i8*, i32, i32, i32*) #1

declare dso_local i32 @skip(i8*) #1

declare dso_local i64 @RegQueryValueExA(i32, i32*, i32, i32*, i32*, i32*) #1

declare dso_local i32* @HeapAlloc(i32, i32, i32) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i64 @RegSetValueA(i32, i32*, i32, i8*, i32) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @HeapFree(i32, i32, i32*) #1

declare dso_local i64 @RegCloseKey(i32) #1

declare dso_local i64 @MsiGetProductInfoA(i8*, i8*, i32*, i32*) #1

declare dso_local i64 @RegSetValueExA(i32, i32*, i32, i32, i32*, i32) #1

declare dso_local i64 @RegDeleteValueA(i32, i32*) #1

declare dso_local i64 @RegCreateKeyExA(i32, i8*, i32, i32*, i32, i32, i32*, i32*, i32*) #1

declare dso_local i64 @delete_key(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
